tests/build/fail/widget/malformed_property_type2.stderr
error[E0121]: the type placeholder `_` is not allowed within types on item signatures
 --> $DIR/malformed_property_type2.rs:8:14
  |
8 |         foo: _ = 10;
  |              ^ not allowed in type signatures
  |
help: use type parameters instead
  |
3 | #[widget($crate::test_widget)]<T>
4 | pub mod test_widget {
5 |     use zero_ui::core::NilUiNode;
6 |
7 |     properties! {
8 |         foo: T = 10;
  |

error[E0121]: the type placeholder `_` is not allowed within types on item signatures
 --> $DIR/malformed_property_type2.rs:8:14
  |
8 |         foo: _ = 10;
  |              ^ not allowed in type signatures
  |
help: use type parameters instead
  |
3 | #[widget($crate::test_widget)]<T>
4 | pub mod test_widget {
5 |     use zero_ui::core::NilUiNode;
6 |
7 |     properties! {
8 |         foo: T = 10;
  |

error[E0121]: the type placeholder `_` is not allowed within types on item signatures
 --> $DIR/malformed_property_type2.rs:8:14
  |
3 | #[widget($crate::test_widget)]
  | ------------------------------ help: replace with the correct return type: `&'static [type error]`
...
8 |         foo: _ = 10;
  |              ^ not allowed in type signatures

error[E0121]: the type placeholder `_` is not allowed within types on item signatures
 --> $DIR/malformed_property_type2.rs:8:14
  |
8 |         foo: _ = 10;
  |              ^ not allowed in type signatures
